school info added

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,6 +21,8 @@ en: &DEFAULT_EN
       section: timeline
     - title: "Team"
       section: team
+    - title: Teaching
+      section: schools
     - title: "Contact"
       section: contact
     - title: "Theme Source"
