--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ theme: jekyll-agency
 url    : "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 
-title      : Ysis Tarter
+title      : Hi, I'm Ysis!
 email      : ysis@cs.stanford.edu
 # email      : your-email@example.com #this is also the email contact forms will go to
 description: "digital cv"
