--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,12 +11,13 @@
 # -----------------
 en: &DEFAULT_EN
   nav:
-    - title: "Services"
+    - title: "About"
+      section: about
+    - title: "Organizations"
       section: services
     - title: "Highlights"
       section: portfolio
-    - title: "About"
-      section: about
+
     - title: "Timeline"
       section: timeline
     - title: "Team"
